--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,5 +1,5 @@
 body {
-  font: 10px sans-serif;
+  font-family: 'Raleway', sans-serif;
 }
 
 h1 {
@@ -21,5 +21,9 @@ h1 {
 
 .viz {
 	float: right;
-	width: 80vw;
+}
+
+#deptsearch {
+	width: 100%;
+	height: 20px;
 }
