added a hidden div that appears when clicking on an arc. Will be used for building specific visualizations

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -36,6 +36,17 @@ input {
 	margin: 0px;
 }
 
+.Overlay {
+	position: absolute;
+	width: 80%;
+	height: 80%;
+	border: solid;
+	background-color: white;
+	left: 10%;
+	top: 10%;
+	visibility: hidden;
+}
+
 .viz {
 	float: right;
 	width: 74vw;
