--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -21,6 +21,13 @@ input {
 	font-family: 'Raleway', sans-serif;
 }
 
+button {
+	font-family: 'Raleway', sans-serif;
+	font-weight: 300;
+	font-size: 14px;
+	padding: 0px;
+}
+
 .chord path {
   fill-opacity: .67;
   stroke: #000;
@@ -75,3 +82,68 @@ input {
 	width: 90%;
 	height: 20px;
 }
+
+/* Button Styling from http://www.graemeboy.com/modern-css-buttons# */
+/*.button-example-1 {
+        -webkit-border-radius: 3px;
+        -moz-border-radius: 3px;
+        -ms-border-radius: 3px;
+        -o-border-radius: 3px;
+        border-radius: 3px;   
+        -webkit-box-shadow: none;
+        -moz-box-shadow: none;
+        box-shadow: none;
+        -webkit-transition-property: background;
+        -moz-transition-property: background;
+        -o-transition-property: background;
+        transition-property: background;
+        -webkit-transition-duration: 0.3s;
+        -moz-transition-duration: 0.3s;
+        -o-transition-duration: 0.3s;
+        transition-duration: 0.3s;
+        color: #ffffff;
+        text-shadow: none;
+        border: none;
+        height: 32px;
+        line-height: 32px;
+        padding: 0px 25.6px;
+        font-weight: 300;
+        font-size: 14px;
+        font-family: "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+        margin: 0;
+        text-decoration: none;
+        text-align: center;
+        display: inline-block      
+    }
+    
+.button-example-1:hover {
+    text-decoration: none;
+    color: #ffffff
+}
+.button-example-1:active {
+    -webkit-box-shadow: inset 0px 1px 0px rgba(255, 255, 255, 0.03), inset 0px -1px 1px rgba(255, 255, 255, 0.05), 0px 1px 0px #777777, 0px 3px 3px rgba(0, 0, 0, 0.03);
+    -moz-box-shadow: inset 0px 1px 0px rgba(255, 255, 255, 0.3), inset 0px -1px 1px rgba(255, 255, 255, 0.05), 0px 1px 0px #777777, 0px 3px 3px rgba(0, 0, 0, 0.03);
+    box-shadow: inset 0px 1px 0px rgba(255, 255, 255, 0.03), inset 0px -1px 1px rgba(255, 255, 255, 0.05), 0px 1px 0px #777777, 0px 3px 3px rgba(0, 0, 0, 0.03)
+}
+
+.button-example-blue {
+    background: #0971B2;
+}
+
+.button-example-blue:hover {
+    background: #0B88D6;
+}
+
+    .button-example-green {
+        background: #00B233;
+    }
+    .button-example-green:hover {
+        background: #00BD36;
+
+    .button-example-pink {
+        background: #FF0090;
+    }
+
+     .button-example-pink:hover {
+        background: #FF2F90;
+    }*/
